ExportXMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 7.2.0-rc0, 7.0.3, 6.0.12
    • Affects Version/s: None
    • Component/s: None
    • Storage Execution NAMER
    • Fully Compatible
    • v7.0, v6.0
    • Execution NAMR Team 2023-10-02
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Demonstration:

      db = db.getSiblingDB("test");
      db.createCollection( "weather", { timeseries: { timeField: "timestamp" } })
      db.runCommand({insert:"weather", collectionUUID: UUID("12345678-1234-1234-1234-f776a983614f"), documents:[{timestamp: new Date()}]});
      

      This risks data corruption in mongosync, which relies on `collectionUUID` to indicate when a collection has been renamed or dropped.

      Previously I thought this was just a matter of the server deprioritizing CollectionUUIDMismatch errors (see JIRA history), but it’s worse.

      Expected behavior: I would expect CollectionUUIDMismatch to be returned as with non-time-series collections.

            Assignee:
            Gregory Noma
            Reporter:
            Felipe Gasper
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: