SERVER-79446 Respect `collectionUUID` for time-series inserts